PLF-7302 : avoid weird effect on Company title when expanding/collapsing the left panel

--- a/platform-ui-skin/src/main/webapp/skin/less/platform/portlets/platformNavigation/UICompanyNavigationPortlet/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/platform/portlets/platformNavigation/UICompanyNavigationPortlet/Style.less
@@ -22,6 +22,7 @@
 		 border-bottom: 1px solid @borderColor;
         border-top: 1px solid @borderColor;
 		text-shadow: none;
+		overflow: hidden;
       a {
         color: @plfNavigationTitleColor;
       }
